# notebook-ai

./: .gitignore  README.md  environment.yml  pyproject.toml
dspy/: main.ipynb
notebooks/: function_calling.ipynb  main.ipynb
openai/: function_calling.ipynb  main.ipynb
